# KnitSim

./: .clang-format  .gitignore  README.md
knitviz-frontend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-wasm.sh  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
knitviz-frontend/cmake/: wasm.cmake
knitviz-frontend/src/: App.vue  blockly-shims.d.ts
knitviz-frontend/src/assets/: base.css  main.css
knitviz-frontend/src/components/editor/: Code.vue  CodeEditor.vue  GridEditor.vue  NodeEditor.vue  VisualEditor.vue  VizRenderer.vue  editor.constants.ts  editor.types.ts
knitviz-frontend/src/components/editor/adapters/: adapterInterface.ts  codeAdapter.ts  gridAdapter.ts  visualAdapter.ts
knitviz-frontend/src/components/ui/: Btn.vue
knitviz-frontend/src/knitgraph/: helpers.ts  index.ts  snapshot.ts  viz.ts  workerProtocol.ts
knitviz-frontend/src/knitgraph/3d/: graph.ts  node.ts  overlay.ts  viz.ts
knitviz-frontend/src/router/: index.ts
knitviz-frontend/src/stores/: editor.ts  globalEditorStore.ts
knitviz-frontend/src/stores/samples/: blocklysamples.ts  codesamples.ts  gridsamples.ts
knitviz-frontend/src/views/: HomeView.vue  PatternViz.vue
knitviz-frontend/src/views/editorView/: EditorsView.vue
knitviz-frontend/src/workers/: graphRender.worker.ts
knitviz-frontend/wasm/: wasm.cpp
knitviz-frontend/wasm/knitsim/: CMakeLists.txt  KnitSim.hpp  common.h
knitviz-frontend/wasm/knitsim/graph/: CMakeLists.txt  Elements.hpp  Graph.cpp  Graph.hpp  Helpers.hpp  enums.hpp
(+1 files in other folders)
